<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rate_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/source"
        style="@style/spinner_style"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_value" />

    <ImageView
        android:id="@+id/changeDirection"
        style="@android:style/MediaButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="12dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:contentDescription="@string/arrow"
        app:layout_constraintEnd_toEndOf="@+id/source"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/source"
        app:layout_constraintTop_toBottomOf="@+id/source"
        app:srcCompat="@drawable/sort_240px"
        tools:ignore="TouchTargetSizeCheck" />

    <Spinner
        android:id="@+id/destination"
        style="@style/spinner_style"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/destination"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeDirection" />

    <Button
        android:id="@+id/convert_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/convert"
        app:layout_constraintEnd_toEndOf="@+id/destination"
        app:layout_constraintStart_toStartOf="@+id/destination"
        app:layout_constraintTop_toBottomOf="@+id/destination" />

    <EditText
        android:id="@+id/input_value"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:autofillHints="Input"
        android:ems="10"
        android:hint="@string/requires_amount"
        android:inputType="numberSigned|number|numberDecimal"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="@+id/source"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/one_place_holder" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/convert_btn">

        <LinearLayout
            android:id="@+id/result_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:visibility="invisible">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingHorizontal="4dp"
                    tools:ignore="UselessParent">

                    <TextView
                        android:id="@+id/result_source_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/result_source_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:enabled="false"
                        android:hint="@string/zero_place_holder"
                        android:inputType="none"
                        android:minHeight="40dp"
                        tools:ignore="Autofill,TouchTargetSizeCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20dp" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/rate_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rate"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/rate_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            app:layout_constraintStart_toEndOf="@+id/rate_label"
                            app:layout_constraintTop_toTopOf="@+id/rate_label" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingHorizontal="4dp"
                    android:visibility="visible"
                    tools:ignore="UselessParent">

                    <TextView
                        android:id="@+id/result_destination_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/result_destination_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:enabled="false"
                        android:hint="@string/zero_place_holder"
                        android:inputType="none"
                        tools:ignore="Autofill,TouchTargetSizeCheck,TouchTargetSizeCheck" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>